[package]
name = "slot-range-helper"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
paste = "1.0"
enumn = "0.1.5"
parity-scale-codec = { version = "3.1.5", default-features = false, features = [
	"derive",
] }
sp-std = { package = "sp-std", git = "https://github.com/chainflip-io/substrate", default-features = false, branch = "fix/polkadot-v0.9.36-recovery-hack" }
sp-runtime = { git = "https://github.com/chainflip-io/substrate", default-features = false, branch = "fix/polkadot-v0.9.36-recovery-hack" }

[features]
default = ["std"]
std = ["sp-std/std", "parity-scale-codec/std", "sp-runtime/std"]
